<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.google.android.apps.iosched.ui.widget.DashboardLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_janusmob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/janusmob_app_name" />

        <Button
            android:id="@+id/button_rucard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rucard_app_name" />

        <Button
            android:id="@+id/button_uspmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uspmap_app_name" />

        <Button
            android:id="@+id/button_bandeco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bandeco_app_name" />
    </com.google.android.apps.iosched.ui.widget.DashboardLayout>

</LinearLayout>